add google sheets

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 
 </head>
 
+<!-- link to google sheets -->
+<!-- https://docs.google.com/spreadsheets/d/1KnzaGZHU3z87VGLq0w5vWGLmsyPsayaKehLsSQL4wNQ/edit#gid=0 -->
+
 <body>
     <div id='headtext'>
-        <h2>Contact Me</h2>
-        <p> Leave me a message for feedback, business inquires, or just to say hello! </p>
+        <h2>Send a Message!</h2>
+        <p> Write anything! </p>
     </div>
 
     <div class="form">
